--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,24 +1,33 @@
-name: Build and Push Docker Image
+name: ci
+
 on:
   push:
     branches:
-      - main  
+      - 'main'
+
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and Push Docker Image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          docker buildx create --use
-          docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/py:v1  --file  Python/Dockerfile 
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker push ${{ secrets.DOCKER_USERNAME }}/py:v1
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: python/.
+          push: true
+          tags: sainiji/py:v1
