--- a/python/dockerfile
+++ b/python/dockerfile
@@ -1,5 +1,10 @@
-FROM python:3.12
+FROM python:3.8
 WORKDIR /app
+COPY ./requirements.txt /app/requirements.txt
+RUN python -m venv venv
+RUN . venv/bin/activate
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . /app
-RUN pip --no-cache-dir install -r requirements.txt
-CMD ["python3", "main.py"]
+CMD ["python", "main.py"]
