--- a/python/dockerfile
+++ b/python/dockerfile
@@ -1,10 +1,9 @@
-FROM python:3.8
+FROM python
+RUN mkdir /app
+ADD . /app
 WORKDIR /app
-COPY ./requirements.txt /app/requirements.txt
 RUN python -m venv venv
 RUN . venv/bin/activate
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . /app
 CMD ["python", "main.py"]
